ultimos cambios de front end 24-06-2024

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,9 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx,src"],
   "exclude": ["node_modules"]
 }
